--- a/ansible/info.yml
+++ b/ansible/info.yml
@@ -2,6 +2,7 @@ webPoject:
   hosts:
     138.68.162.113
   vars:
+    domain: html
     web_user: www-data
     web_group: www-data
     ansible_user: root
